// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Stories listing 1`] = `
<div
  className="Stories"
>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Story card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/"
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Stories loading 1`] = `
<div
  className="Stories text-center"
>
  <div
    className="my-0"
  >
    <i
      className="fa fa-spin fa-spinner fa-2x"
    />
  </div>
</div>
`;

exports[`Storyshots Stories with error 1`] = `
<div
  className="Stories"
>
  <div
    className="alert alert-danger"
    type="danger"
  >
    Network Error
  </div>
</div>
`;

exports[`Storyshots Story shout 1`] = `
<div
  className="Story card"
>
  <div
    className="Shout"
  >
    <div
      className="Shout-head"
    >
      <div
        className="Score-display"
      >
        <button
          className="Score-vote"
          disabled={false}
          onClick={[Function]}
        >
          <i
            className="fa fa-arrow-up"
          />
        </button>
        <div
          className="Score-votes"
        >
          3k
        </div>
        <button
          className="Score-vote"
          disabled={false}
          onClick={[Function]}
        >
          <i
            className="fa fa-arrow-down"
          />
        </button>
      </div>
      <a
        className="Shout-thumbnail"
        href="/"
      >
        <img
          alt="Thumbnail"
          src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
        />
      </a>
      <div
        className="Shout-info"
      >
        <a
          className="Shout-title text-dark"
          href="/story/tienen-que-shoutear-minas-asi_z50xj"
        >
          Tienen que shoutear minas asi
        </a>
        <p
          className="Shout-meta"
        >
          Posteado por
          <a
            href="/user/F3D3_14"
          >
            F3D3_14
          </a>
          <time
            dateTime="2017-12-22T05:28:22.005Z"
            title="2017-12-22 05:28"
          >
            hace 1 hora
          </time>
        </p>
        <div
          className="Shout-actions"
        >
          <button
            className="btn btn-action"
            onClick={[Function]}
            title="Vista previa"
          >
            <i
              className="fa fa-expand"
            />
          </button>
          <button
            className="btn btn-action"
            title="Comentar"
          >
            <i
              className="fa fa-comments"
            />
            8k
             comentarios
          </button>
          <button
            className="btn btn-action"
            title="Compartir"
          >
            <i
              className="fa fa-retweet"
            />
            4.5k
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
